# risc_starter_rust

./: .gitignore  LICENSE  README.md
gd32vf103_starter_toolchain/: Cargo.toml  README_CN.md  memory.x
gd32vf103_starter_toolchain/.cargo/: config
gd32vf103_starter_toolchain/src/: driver.rs  main.rs
gd32vf103_starter_toolchain/src/driver/: common.rs  gpio.rs  memory.rs
